@@ -285,6 +285,9 @@ Optimizations
 * LUCENE-5767: OrdinalMap optimizations, that mostly help on low cardinalities.
   (Martijn van Groningen, Adrien Grand) 
 
+* LUCENE-5769: SingletonSortedSetDocValues now supports random access ordinals.
+  (Robert Muir)
+
 Bug fixes
 
 * LUCENE-5738: Ensure NativeFSLock prevents opening the file channel for the
